--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 main
 launch.json
 tasks.json
+settings.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++
